@@ -9,6 +9,7 @@
 * Jetpay: Support endpoint for Canada [shasum]
 * Telr: Add gateway support [curiousepic]
 * Moneris: Fix unit test stubs [shasum]
+* Stripe: Support new network tokenization API params [methodmissing]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
